Close Issue #17: Fix Chrome IFrame issue with Whitespace Padding

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,6 +2,10 @@ body {
   padding-top: 60px; 
 }
 
+iframe {
+  padding: 0 !important;
+}
+
 #comments .media-heading {
 	font-size: 12px;
 }
